--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
-pandas
+# -*- coding: utf-8 -*-
+"""
+Created on Thu May  9 13:29:12 2024
+
+@author: Dhanush
+"""
+
+pandas 
 numpy
-seaborn
 matplotlib
-scikit-learn
+seaborn
+sklearn
 selenium
+Flask
+pickle
+requests
