--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 # -*- coding: utf-8 -*-
-"""
-Created on Thu May  9 13:29:12 2024
 
-@author: Dhanush
-"""
 
-python = 3.8.19
-pandas = 2.0.3
-numpy = 1.24.4
-matplotlib = 3.7.5
-seaborn = 0.13.2
-scikit-learn = 1.3.2 
-selenium = 4.18.1
-Flask = 2.2.5 
-requests = 2.31.0
-pickle
+#python = 3.8.19
+pandas 
+numpy 
+matplotlib
+seaborn 
+scikit-learn 
+Xgboost
+catboost    
+selenium == 4.18.1
+Flask 
+requests 
 gunicorn 
+wordcloud
+nltk
+
+#-e .
