--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,19 @@
 
 
 #python = 3.8.19
-pandas 
-numpy 
-matplotlib
-seaborn 
-scikit-learn 
-Xgboost
-catboost    
+pandas == 2.0.3
+numpy == 1.24.4
+# matplotlib
+# seaborn 
+scikit-learn == 1.3.2
+xgboost ==2.1.1
+catboost == 1.2.5
 selenium == 4.18.1
-Flask 
-requests 
-gunicorn 
-wordcloud
-nltk
-mlflow
+Flask == 2.2.5
+requests == 2.31.0
+# gunicorn == 22.0.0
+# wordcloud
+# nltk
+mlflow == 2.17.2
 
 -e .
