--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ catboost == 1.2.5
 selenium == 4.18.1
 Flask == 2.2.5
 requests == 2.31.0
-# gunicorn == 22.0.0
+gunicorn == 22.0.0
 # wordcloud
 # nltk
 mlflow == 2.17.2
