--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,17 @@
 
 
 #python = 3.8.19
-pandas == 2.0.3
-numpy == 1.24.4
+pandas 
+numpy 
 # matplotlib
 # seaborn 
-scikit-learn == 1.3.2
-xgboost ==2.1.1
-catboost == 1.2.5
-selenium == 4.18.1
-Flask == 2.2.5
-requests == 2.31.0
-gunicorn == 22.0.0
+scikit-learn 
+xgboost
+catboost 
+selenium 
+Flask 
+requests 
+gunicorn 
 # wordcloud
 # nltk
 mlflow == 2.17.2
