updated req (added dill)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 # -*- coding: utf-8 -*-
 
-
-#python = 3.8.19
+dill
 pandas 
 numpy 
 # matplotlib
 # seaborn 
-scikit-learn 
+scikit-learn  
 # xgboost
 # catboost 
 # selenium 
